[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olabatsim-gui"
version = "0.1.1"
description = "Streamlit-based degradation simulation tool"
authors = [{ name="Harisankar", email="harisankar.suresh@olaelectric.com" }]
dependencies = [
    "streamlit==1.46.1",
    "olabatsim @ git+https://github.com/harisankar99ola/olabatsim.git",
    "pandas",
    "numpy"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "mypy",
  "pre-commit",
]

[project.scripts]
olabatsim-gui = "olabatsim_gui.__main__:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["olabatsim_gui"]

[tool.ruff]
line-length = 150
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "C90"]
ignore = ["T201","N806","N803"]
exclude = ["__pycache__", "build", "dist", ".venv", ".git", ".mypy_cache",".qodo"]
fixable = ["ALL"]
